# HeadsetControl-GUI

./: .gitignore  .mcp.json  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: PROJECT.md  README.md  maxwell-control-mono.html
docs/architecture/: README.md  capabilities.md  design-system.md  overview.md  security.md  state-machine.md  testing.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-exec-headsetcontrol-from-rust.md  0003-lint-and-format-toolchain.md  0004-ci-gates-and-coverage-enforcement.md  0005-frontend-backend-contract.md  0006-app-state-machine.md  0007-i18n-vue-i18n.md  0008-tailwind-v4-mono-design-system.md  0009-headsetcontrol-adapter-seam.md  README.md
docs/fixtures/: malformed-truncated.json  maxwell2-xbox-output-json.json  maxwell2-xbox-partial-errors.json  no-devices.json  test-device-multi.json  unknown-capability.json  write-actions-mixed.json
scripts/: rs-coverage-gate.mjs
src/: App.spec.ts  App.vue  main.ts  test-support.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/backend/: exec.rs  headsetcontrol.rs  hotplug.rs  mod.rs
src/controls/: HOptions.spec.ts  HOptions.vue  HReadout.spec.ts  HReadout.vue  HSlider.spec.ts  HSlider.vue  HStepper.spec.ts  HStepper.vue
src/core/: backend.spec.ts  probe.ts  (+9 more)
(+18 files in other folders)
