[package]
name = "headset-deck"
version = "0.1.0"
description = "Universal GUI for headsetcontrol"
authors = ["Adrian Kuriata"]
license = "GPL-3.0-or-later"
repository = "https://github.com/AdrianKuriata/HeadsetControl-GUI"
edition = "2024"
rust-version = "1.85"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "headset_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.25"
specta-typescript = "=0.0.12"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
